# executor

./: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml
config/: risk.defaults.yaml  risk.yaml
data/manual_executions/: README.md  executions.csv
docs/: gate_trace_example.md
executor/: __init__.py  __main__.py  cli.py
executor/analysis/: edge_half_life.py
executor/attribution/: __init__.py  server.py  tracker.py
executor/audit/: __init__.py  writer.py
executor/control/: __init__.py  protocol.py  socket_server.py
executor/core/: __init__.py  daemon.py  event_bus.py  events.py  intent.py  logging.py  orchestrator.py  self_check.py  service.py  telemetry.py  types.py
executor/detectors/: __init__.py
executor/kill/: __init__.py  manager.py  state.py
executor/risk/: __init__.py  clock_probe.py  config.py  exposure.py  gates.py  host_probe.py  kill.py  policy.py  state.py  types.py  venue_health.py
executor/strategies/: __init__.py  base.py
executor/telegram/: __init__.py  bot.py  watchdog.py
executor/tools/: kalshi_rest_snapshot.py  (+2 more)
scripts/: backfill_attribution.py  burn_in_yes_no_cross.py  canary.py  daily_digest.py  executorctl  log_manual_execution.py  paper_exposure_reset.py  reconciliation.py  smoke_phase1.py  trace_one_intent.py
state/: BACKFILL_NEEDED.md
systemd/: executor.service  executor.service.op  logrotate-executor.conf
tests/: test_audit_writer.py  test_cli.py  test_event_bus.py  test_events.py  test_intent.py  test_orchestrator.py  test_phase1_smoke.py  test_phase47.py  test_self_check.py  test_telemetry.py
(+66 files in other folders)
