[project]
name = "executor"
version = "0.0.1"
description = "Build Zero 0d — executor module. Venue adapters, strategy adapters, risk policy, audit log, kill switch."
requires-python = ">=3.12"
dependencies = [
  "structlog>=24.1.0",
  "pyyaml>=6.0.1",
  "cryptography>=42.0.0",
  "aiohttp>=3.9.0",
  "uuid6>=2024.7.10",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["executor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
